--- a/esm204_hw3.Rmd
+++ b/esm204_hw3.Rmd
@@ -153,7 +153,11 @@ The benefit to consumers is \$52987.22. The benefit to producers is \$26835.97. 
 
 ```{r}
 
+high_CS <- CS_high/100
+low_CS <- CS_low/100
 ```
+
+Currently, the benefit to high income consumers is $44,874.79, and the benefit to low income consumers is $8,112.43.
 
 4. Derive the optimal electricity tax (in cents per kWh) using the interim SCC. Noting that recent research has shown the poor face a disproportionate share of the impacts from climate change, assume that the climate externality is borne entirely by the “low” income group. What would be the effects of this tax on:
 (a) The amount of electricity produced and consumed
