--- a/esm204_hw3.Rmd
+++ b/esm204_hw3.Rmd
@@ -157,7 +157,7 @@ high_CS <- CS_high/100
 low_CS <- CS_low/100
 ```
 
-Currently, the benefit to high income consumers is \$44,874.79, and the benefit to low income consumers is $8,112.43.
+**Currently, the benefit to high income consumers is \$44,874.79, and the benefit to low income consumers is $8,112.43.**
 
 4. Derive the optimal electricity tax (in cents per kWh) using the interim SCC. Noting that recent research has shown the poor face a disproportionate share of the impacts from climate change, assume that the climate externality is borne entirely by the “low” income group. What would be the effects of this tax on:
 (a) The amount of electricity produced and consumed
@@ -167,6 +167,8 @@ Currently, the benefit to high income consumers is \$44,874.79, and the benefit 
 (e) Power suppliers (i.e., electricity producers)
 (f) Total environmental damage
 (g) Total tax revenue generated
+
+
 
 5.Now, assume that all revenue from the electricity tax will be redistributed to the consumers in proportion to their pre-tax consumption. For example, if 80% of the electricity was consumed by “high” income consumers, then they get 80% of the tax revenue. Additionally, consider the fact that current scientific evidence suggests the true SCC may be much higher than \$51. For a range of SCC values (\$51, \$75, \$100, \$125, and $150 per metric ton of CO2), calculate the effects of an SCC-based electricity tax on:
 (a) Overall welfare of “high” income consumers
