--- a/esm204_hw3.Rmd
+++ b/esm204_hw3.Rmd
@@ -43,13 +43,13 @@ library(stats)
 
 ```{r}
 #convert pounds to metric tons and then multiply by cost
-(0.85/2404.62)*51
+(0.85/2204.62)*51
 
 #(lbs carbon/1 metric ton)*SCC
 
 ```
 
-**Assuming the interim SCC correctly reflects the total soial cost of one metric ton of CO2, the marginal cost per kwH of electricity is $0.018**
+**Assuming the interim SCC correctly reflects the total social cost of one metric ton of CO2, the marginal cost per kwH of electricity is $0.02**
 
 2.What is the aggregate monthly demand curve for electricity? What is the supply curve for electricity? What is the “benefit” to consumers under the status quo? What is the “benefit” to producers under the status quo? What is the environmental cost under the status quo?
 
@@ -111,8 +111,8 @@ ggplot() +
   geom_line(l_pred, mapping = aes(x = demand, y = price, color = "Low income", lty = "Low income")) +
   geom_line(h_pred, mapping = aes(x = demand, y = price, color = "High income", lty = "High income")) +
   geom_line(MPC, mapping = aes(x = demand, y = price, color = "MPC", lty = "MPC")) +
-  geom_segment(aes(x = 0, y = 1.8, xend = 819713.75, yend = 1.8, color = "MEC", lty = "MEC")) +
-  geom_line(MPC, mapping = aes(x = demand, y = price + 1.8, color = "MSC", lty = "MSC")) +
+  geom_segment(aes(x = 0, y = 2, xend = 819713.75, yend = 2, color = "MEC", lty = "MEC")) +
+  geom_line(MPC, mapping = aes(x = demand, y = price + 2, color = "MSC", lty = "MSC")) +
   scale_color_manual(name = "Legend", values = cal_palette("kelp1")) +
   scale_linetype_manual(name = "Legend", values = c("solid", "dashed", "dashed", "solid", "dotdash", "solid")) +
   labs(x = "Quantity (kWh)",
@@ -143,10 +143,10 @@ PS <- function(q){
 PS_calc <- PS(qfm)
 
 #environmental cost
-env_cost <- 1.8 * qfm
+env_cost <- 2 * qfm
 ```
 
-**The benefit to consumers is \$52987.22. The benefit to producers is \$26835.97. The environmental cost under the status quo is $9660.95.**
+**The benefit to consumers is \$52987.22. The benefit to producers is \$26835.97. The environmental cost under the status quo is $10734.39.**
 
 
 3. How is the current consumer benefit divided between “high” and “low” income consumers?
@@ -160,10 +160,16 @@ low_CS <- CS_low/100
 **Currently, the benefit to high income consumers is \$44,874.79, and the benefit to low income consumers is $8,112.43.**
 
 4. Derive the optimal electricity tax (in cents per kWh) using the interim SCC. Noting that recent research has shown the poor face a disproportionate share of the impacts from climate change, assume that the climate externality is borne entirely by the “low” income group. What would be the effects of this tax on:
+
 (a) The amount of electricity produced and consumed
 
 ```{r}
+#tax = P value of MEC at Q*
+tax <- 1.8
 
+demand_low <- function(q){
+  p <- 
+}
 
 ```
 
