--- a/esm204_hw3.Rmd
+++ b/esm204_hw3.Rmd
@@ -304,7 +304,7 @@ for(i in 1:length(MEC_vec)){
   
   results <- cbind(i, peq_new, qeq_new, encost_new, CSlow_new, CShigh_new) %>% unlist(recursive = FALSE)
   
-  values <- bind_rows(values, results)
+  values <- rbind(values, results)
 }
 ```
 ```{r}
