--- a/esm204_hw3.Rmd
+++ b/esm204_hw3.Rmd
@@ -200,7 +200,7 @@ ggplot() +
   geom_line(h_pred_new, mapping = aes(x = demand, y = price, color = "High income (new)", lty = "High income (new)")) +
   geom_line(MPC, mapping = aes(x = demand, y = price, color = "MPC", lty = "MPC")) +
   geom_segment(aes(x = 0, y = 1.97, xend = 819713.75, yend = 1.97, color = "MEC", lty = "MEC")) +
-  geom_line(agg_data_new, mapping = aes(x = Qagg_new, y = price, color = "New Aggregate", lty = "New Aggregate")) +
+  geom_line(agg_data_new, mapping = aes(x = Qagg_new, y = price, color = "Aggregate (new)", lty = "Aggregate (new)")) +
   scale_color_manual(name = "Legend", values = cal_palette("kelp1")) +
   scale_linetype_manual(name = "Legend", values = c("dotdash", "dashed", "dashed", "solid", "solid", "solid")) +
   labs(x = "Quantity (kWh)",
